--- a/index.html
+++ b/index.html
@@ -278,19 +278,19 @@
           </span>
           Paper
         </a>
-        <!-- Code Button (coming soon) -->
-        <a href="#" target="_blank" class="btn btn-dark btn-lg mx-2" disabled>
+        <!-- Code Button  -->
+        <a href="https://github.com/PRIS-CV/FakeReasoning" target="_blank" class="btn btn-dark btn-lg mx-2" disabled>
           <span class="icon">
             <img src="static/images/gitt.png" width="25" alt="GitHub">
           </span>
-          Code (coming soon)
+          Code
         </a>
-        <!-- Dataset Button (coming soon) -->
-        <a href="#" target="_blank" class="btn btn-dark btn-lg mx-2" disabled>
+        <!-- Dataset Button -->
+        <a href="https://huggingface.co/datasets/AnnaGao/MMFR-Dataset" target="_blank" class="btn btn-dark btn-lg mx-2" disabled>
           <span class="icon">
             <img src="static/images/hf-logo-pirate.png" width="25" alt="Dataset">
           </span>
-          Dataset (coming soon)
+          Dataset
         </a>
 
         <!-- Demo Button (coming soon) -->
